fixing typo in keywords

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "ember-addon",
     "mention",
-    "hastag"
+    "hashtag"
   ],
   "license": "MIT",
   "author": "adam kay (adam@jelli.com)",
