--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "coveralls": "^2.13.1",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.14.0-beta.1",
     "ember-cli-dependency-checker": "^1.3.0",
