--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "node": ">= 4"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://yakmada.github.io/ember-cli-mentionable/dist/"
   }
 }
